# diplomat-java

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build-feature.sh
.github/workflows/: check-diplomat.yml  ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/backend/: mod.rs
cli/src/backend/snapshots/: diplomat_java__backend__test__enum_and_struct.snap  diplomat_java__backend__test__lifetimes.snap  diplomat_java__backend__test__opaque.snap  diplomat_java__backend__test__opaque_render.snap  diplomat_java__backend__test__slice.snap
feature/: Cargo.toml
feature/java/somelib/src/main/java/dev/diplomattest/somelib/ntv/: somelib_h.java
feature/src/: attrs.rs  lib.rs  slices.rs
feature/tmp/src/main/dev/diplomattest/somelib/ntv/: somelib_h.java
jextrsact/: Cargo.toml  README.md
jextrsact/src/: lib.rs
