[package]
name = "diplomat-java"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
clap = "4.5.17"
colored = "2.1.0"
diplomat-runtime = { path = "../../diplomat/runtime" }
# diplomat-runtime = { git = "https://github.com/rust-diplomat/diplomat.git", rev = "d7ecae027753e5b6839169c3492e5269bc0ebbaa", version = "0.8.1" }
# diplomat-tool = { git = "https://github.com/rust-diplomat/diplomat.git", rev = "d7ecae027753e5b6839169c3492e5269bc0ebbaa", version = "0.8.0" }
diplomat-tool = { path = "../../diplomat/tool" }
diplomat_core = { path = "../../diplomat/core" }
displaydoc = "0.2.5"
heck = "0.5.0"
indenter = "0.3.3"
pulldown-cmark = "0.12.1"
quote = "1.0.37"
serde = "1.0.210"
syn = { version = "2", features = [ "full", "extra-traits" ] }
syn-inline-mod = "0.6.0"
toml = "0.8.19"

[dev-dependencies]
insta = "1.40.0"
proc-macro2 = "1.0.79"
