[package]
name = "diplomat-java"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
clap = "4"
colored = "2.1.0"
diplomat-runtime = { git = "https://github.com/rust-diplomat/diplomat", revision = "588f6ffe413bfca367bbb2a749a5965d40a3d5b3", package = "diplomat-runtime"}
diplomat-tool = { git = "https://github.com/rust-diplomat/diplomat", revision = "588f6ffe413bfca367bbb2a749a5965d40a3d5b3", package = "diplomat-tool" }
diplomat_core = { git = "https://github.com/rust-diplomat/diplomat", revision = "588f6ffe413bfca367bbb2a749a5965d40a3d5b3", package = "diplomat_core" }
heck = "0.5.0"
indenter = "0.3.3"
pulldown-cmark = "0.12.1"
quote = "1.0.37"
serde = "1.0.210"
syn = { version = "2", features = [ "full", "extra-traits" ] }
syn-inline-mod = "0.6.0"
toml = "0.8.19"

[dev-dependencies]
insta = "1.40.0"
proc-macro2 = "1.0.79"
