[package]
name = "feature-tests"
version = "0.0.0"
publish = false
authors = [
    "Jan Cristina <jan.cristina@gmail.com>", 
    "Manish Goregaokar <manishsmail@gmail.com>",
]
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
diplomat-runtime = { git = "https://github.com/jcrist1/diplomat", branch = "tool-and-c-backend-pub", package = "diplomat-runtime"}
diplomat = { git = "https://github.com/jcrist1/diplomat", branch = "tool-and-c-backend-pub", package = "diplomat" }
log = { version = "0.4" }
