[package]
name = "feature-tests"
version = "0.0.0"
publish = false
authors = [
    "Jan Cristina <jan.cristina@gmail.com>", 
    "Manish Goregaokar <manishsmail@gmail.com>",
]
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
diplomat-runtime = { git = "https://github.com/rust-diplomat/diplomat", revision = "588f6ffe413bfca367bbb2a749a5965d40a3d5b3", package = "diplomat-runtime"}
diplomat = { git = "https://github.com/rust-diplomat/diplomat", revision = "588f6ffe413bfca367bbb2a749a5965d40a3d5b3", package = "diplomat" }
log = { version = "0.4" }
